set up api key getter

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div id="buttonDiv"></div>
+	<div id="signOutButton">Sign out</div>
 	<div id="content" style="display:none">
 		<button id="startButton">Start</button>
 		<button id="stopButton" disabled="disabled">Stop</button>
