change setting labels, fix key reading

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<button id="startButton">Start</button>
 		<button id="stopButton" disabled="disabled">Stop</button>
 		<input id="voiceOutput" type="checkbox">
-		<label for="voiceOutput">voice output</label>
-		<input id="detectLanguageChange" type="checkbox">
-		<label for="detectLanguageChange">detect language change</label>
+		<label for="voiceOutput">Voice output</label>
+		<input id="conversationMode" type="checkbox">
+		<label for="conversationMode">Conversation mode</label>
 
 
 		<div id="displayContainer">
