split files, swap english voice

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 
 	<script src="https://accounts.google.com/gsi/client" async></script>
 	<script src="./index.js"></script>
+	<script src="./translation.js"></script>
 </body>
 </html>
