--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 				<div id="signInButton" style="display: none"></div>
 				<div id="signOutButton" style="display: none">Sign out</div>
 			</div>
+			<div class="introText" id="settingsStartContainer" style="visibility: hidden">	
+				<div id="settingsButton">Settings</div>
+				<div id="start">START</div>
+			</div>
+
 		</div>
 	</div>
 
 	<div id="content" style="display: none">
-		<button id="startButton">Start</button>
-		<button id="stopButton" disabled="disabled">Stop</button>
-		<input id="voiceOutput" type="checkbox">
-		<label for="voiceOutput">Voice output</label>
-		<input id="conversationMode" type="checkbox">
-		<label for="conversationMode">Conversation mode</label>
+		<div>
+			<button id="startButton">Start</button>
+			<button id="stopButton" disabled="disabled">Stop</button>
+			<input id="voiceOutput" type="checkbox">
+			<label for="voiceOutput">Voice output</label>
+			<input id="conversationMode" type="checkbox">
+			<label for="conversationMode">Conversation mode</label>
+		</div>
 
 		<div id="displayContainer">
 			<div id="resultsContainer">
