--- a/index.html
+++ b/index.html
@@ -5,37 +5,121 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="introContainer">
-		<div id="introTextContainer">
-			<div class="introText" id="helloText">Layho</div>
-			<div class="introText" id="nameText"></div>
-			<div class="introText" id="signInOutContainer">
-				<div id="signInButton" style="display: none"></div>
-				<div id="signOutButton" style="display: none">Sign out</div>
+	<div id="contentContainer">
+		<div id="introContainer">
+			<div id="introTextContainer">
+				<div class="introText" id="helloText">Layho</div>
+				<div class="introText" id="nameText"></div>
+				<div class="introText" id="signInOutContainer">
+					<div id="signInButton" style="display: none"></div>
+					<div id="signOutButton" style="display: none">Sign out</div>
+				</div>
+				<div class="introText" id="settingsStartButtonContainer" style="visibility: hidden">	
+					<div id="settingsButton">Settings</div>
+					<div id="start">START</div>
+				</div>
 			</div>
-			<div class="introText" id="settingsStartContainer" style="visibility: hidden">	
-				<div id="settingsButton">Settings</div>
-				<div id="start">START</div>
+		</div>
+		<div id="settingsModal" style="display: none">
+			<div id="settingsContainer">
+				<div id="settingsContentContainer">
+					<div id="settingsHeader">Settings</div>
+					<div id="settingsList">
+						<div class="setting">
+							<div class="settingTitle">Language</div>
+							<div class="settingOption">
+								<div class="settingOptionLabel">Translate from:</div>
+								<select id="languageOptions">
+									<option value="ar-EG">Arabic - EG</option>
+									<option value="my-MM">Burmese - MM</option>
+									<option value="ca-ES">Catalan - ES</option>
+									<option value="zh-CN">Chinese - CN</option>
+									<option value="zh-HK" selected="selected">Chinese - HK</option>
+									<option value="zh-TW">Chinese - TW</option>
+									<option value="da-DK">Danish - DK</option>
+									<option value="nl-NL">Dutch - NL</option>
+									<option value="en-AU">English - AU</option>
+									<option value="en-GB">English - GB</option>
+									<option value="en-US">English - US</option>
+									<option value="fil-PH">Filipino - PH</option>
+									<option value="de-DE">German - DE</option>
+									<option value="es-ES">Spanish - ES</option>
+									<option value="es-MX">Spanish - MX</option>
+									<option value="fi-FI">Finnish - FI</option>
+									<option value="fr-CA">French - CA</option>
+									<option value="fr-FR">French - FR</option>
+									<option value="hi-IN">Hindi - IN</option>
+									<option value="id-ID">Indonesian - ID</option>
+									<option value="it-IT">Italian - IT</option>
+									<option value="ja-JP">Japanese - JP</option>
+									<option value="km-KH">Khmer - KH</option>
+									<option value="ko-KR">Korean - KR</option>
+									<option value="nb-NO">Norwegian - NO</option>
+									<option value="pl-PL">Polish - PL</option>
+									<option value="pt-BR">Portuguese - BR</option>
+									<option value="pt-PT">Portuguese - PT</option>
+									<option value="ru-RU">Russian - RU</option>
+									<option value="sv-SE">Swedish - SE</option>
+									<option value="th-TH">Thai - TH</option>
+									<option value="vi-VN">Vietnamese - VN</option>
+								</select>
+							</div>
+							<div class="settingOption">
+								<div class="settingOptionLabel">Translate to:</div>
+								<select id="languageTargetOptions">
+									<option value="ar-EG-SalmaNeural">Arabic - EG</option>
+									<option value="my-MM-NilarNeural">Burmese - MM</option>
+									<option value="ca-ES-AlbaNeural">Catalan - ES</option>
+									<option value="zh-CN-XiaohanNeural">Chinese - CN</option>
+									<option value="zh-HK-HiuGaaiNeural">Chinese - HK</option>
+									<option value="zh-TW-YunJheNeural">Chinese - TW</option>
+									<option value="da-DK-JeppeNeural">Danish - DK</option>
+									<option value="nl-NL-ColetteNeural">Dutch - NL</option>
+									<option value="en-AU-NatashaNeural">English - AU</option>
+									<option value="en-GB-NoahNeural">English - GB</option>
+									<option value="en-US-AvaMultilingualNeural" selected="selected">English - US</option>
+									<option value="fil-PH-BlessicaNeural">Filipino - PH</option>
+									<option value="de-DE-BerndNeural">German - DE</option>
+									<option value="es-ES-ElviraNeural">Spanish - ES</option>
+									<option value="es-MX-LibertoNeural">Spanish - MX</option>
+									<option value="fi-FI-HarriNeural">Finnish - FI</option>
+									<option value="fr-CA-JeanNeural">French - CA</option>
+									<option value="fr-FR-ClaudeNeural">French - FR</option>
+									<option value="hi-IN-MadhurNeural">Hindi - IN</option>
+									<option value="id-ID-GadisNeural">Indonesian - ID</option>
+									<option value="it-IT-CataldoNeural">Italian - IT</option>
+									<option value="ja-JP-KeitaNeural">Japanese - JP</option>
+									<option value="km-KH-SreymomNeural">Khmer - KH</option>
+									<option value="ko-KR-InJoonNeural">Korean - KR</option>
+									<option value="nb-NO-FinnNeural">Norwegian - NO</option>
+									<option value="pl-PL-ZofiaNeural">Polish - PL</option>
+									<option value="pt-BR-BrendaNeural">Portuguese - BR</option>
+									<option value="pt-PT-RaquelNeural">Portuguese - PT</option>
+									<option value="ru-RU-DmitryNeural">Russian - RU</option>
+									<option value="sv-SE-HilleviNeural">Swedish - SE</option>
+									<option value="th-TH-PremwadeeNeural">Thai - TH</option>
+									<option value="vi-VN-HoaiMyNeural">Vietnamese - VN</option>
+								</select>
+							</div>
+				</div>
+				<div id="settingsCloseButton">Close</div>
 			</div>
-
 		</div>
-	</div>
-
-	<div id="content" style="display: none">
-		<div>
-			<button id="startButton">Start</button>
-			<button id="stopButton" disabled="disabled">Stop</button>
-			<input id="voiceOutput" type="checkbox">
-			<label for="voiceOutput">Voice output</label>
-			<input id="conversationMode" type="checkbox">
-			<label for="conversationMode">Conversation mode</label>
-		</div>
-
-		<div id="displayContainer">
-			<div id="resultsContainer">
-				<div class="textContainer" id="detected"></div>
-			    <div id="separator"></div>
-			    <div class="textContainer" id="translated"></div>
+		<div id="translationContainer" style="display: none">
+			<div id="controlsContainer">
+				<button id="startButton">Start</button>
+				<button id="stopButton" disabled="disabled">Stop</button>
+				<input id="voiceOutput" type="checkbox">
+				<label for="voiceOutput">Voice output</label>
+				<input id="conversationMode" type="checkbox">
+				<label for="conversationMode">Conversation mode</label>
+			</div>
+			<div id="displayContainer">
+				<div id="resultsContainer">
+					<div class="textContainer" id="detected"></div>
+					<div id="separator"></div>
+					<div class="textContainer" id="translated"></div>
+				</div>
 			</div>
 		</div>
 	</div>
