renaming, response structure changed

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<div class="setting">
 							<div class="settingTitle">Language</div>
 							<div class="settingOption">
-								<label for="languageOptions" class="settingOptionLabel">Translate from:</label>
-								<select id="languageOptions">
+								<label for="inputLanguageOptions" class="settingOptionLabel">Translate from:</label>
+								<select id="inputLanguageOptions">
 									<option value="ar-EG">Arabic - EG</option>
 									<option value="my-MM">Burmese - MM</option>
 									<option value="ca-ES">Catalan - ES</option>
@@ -65,8 +65,8 @@
 								</select>
 							</div>
 							<div class="settingOption">
-								<label for="languageTargetOptions" class="settingOptionLabel">Translate to:</label>
-								<select id="languageTargetOptions">
+								<label for="targetLanguageOptions" class="settingOptionLabel">Translate to:</label>
+								<select id="targetLanguageOptions">
 									<option value="ar-EG-SalmaNeural">Arabic - EG</option>
 									<option value="my-MM-NilarNeural">Burmese - MM</option>
 									<option value="ca-ES-AlbaNeural">Catalan - ES</option>
@@ -119,9 +119,9 @@
 				<button id="homeButton">Home</button>
 			</div>
 			<div id="languageSelectionDisplay">
-				<div id="languageOptionDisplay"></div>
-				<button id="languageSwitchButton">SWITCH</button>
-				<div id="languageTargetDisplay"></div>
+				<div id="inputLanguageDisplay"></div>
+				<button id="switchLanguageButton">SWITCH</button>
+				<div id="targetLanguageDisplay"></div>
 			</div>
 			<div id="translationDisplayContainer">
 				<div id="resultsContainer">
