more renaming, add switchActiveLanguages functionality

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<div class="setting">
 							<div class="settingTitle">Language</div>
 							<div class="settingOption">
-								<label for="inputLanguageOptions" class="settingOptionLabel">Translate from:</label>
-								<select id="inputLanguageOptions">
+								<label for="speechRecognitionLanguageOptions" class="settingOptionLabel">Translate from:</label>
+								<select id="speechRecognitionLanguageOptions">
 									<option value="ar-EG">Arabic - EG</option>
 									<option value="my-MM">Burmese - MM</option>
 									<option value="ca-ES">Catalan - ES</option>
@@ -119,7 +119,7 @@
 				<button id="homeButton">Home</button>
 			</div>
 			<div id="languageSelectionDisplay">
-				<div id="inputLanguageDisplay"></div>
+				<div id="speechRecognitionLanguageDisplay"></div>
 				<button id="switchLanguageButton">SWITCH</button>
 				<div id="targetLanguageDisplay"></div>
 			</div>
