add LanguageOptions as json

--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
 
 	<script src="https://accounts.google.com/gsi/client" async></script>
 	<script src="./index.js"></script>
-	<script src="./translation.js"></script>
+	<script src="./Translation.js"></script>
 </body>
 </html>
