--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<div class="introText" id="signInOutContainer">
 					<div id="signInButton" style="display: none"></div>
 					<button id="signOutButton" style="display: none">Sign out</button>
+					<!-- <button class="iconButton" id="signOutButton" style="display: none"><span class="icon signOutIcon" title="Sign out"></span></button> -->
 				</div>
 				<div class="introText" id="settingsStartButtonContainer" style="visibility: hidden">	
 					<button id="settingsButton">Settings</button>
