--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
 								<select id="targetLanguageOptions"></select>
 							</div>
 						</div>
+						<div class="setting">
+							<div class="settingTitle">Output</div>
+							<div class="settingOption">
+								<label for="voiceOutput" class="settingOptionLabel">Voice</label>
+								<label class="switch">
+									<input id="voiceOutput" type="checkbox">
+									<span class="slider"></span>
+								</label>
+							</div>
+						</div>
+						<div class="setting">
+							<div class="settingTitle">Mode</div>
+							<div class="settingOption">
+								<label for="conversationMode" class="settingOptionLabel">Conversation</label>
+								<label class="switch">
+									<input id="conversationMode" type="checkbox">
+									<span class="slider"></span>
+								</label>
+							</div>
+						</div>
 					</div>
 					<button id="settingsCloseButton">Close</button>
 				</div>
@@ -46,10 +66,6 @@
 			<div id="controlsContainer">
 				<button id="startButton">Start</button>
 				<button id="stopButton" disabled="disabled">Stop</button>
-				<input id="voiceOutput" type="checkbox">
-				<label for="voiceOutput">Voice output</label>
-				<input id="conversationMode" type="checkbox">
-				<label for="conversationMode">Conversation mode</label>
 				<button id="translateViewSettingsButton">Settings</button>
 				<button id="homeButton">Home</button>
 			</div>
