hide switch button by default

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div>
 			<div id="languageSelectionDisplay">
 				<div id="speechRecognitionLanguageDisplay"></div>
-				<button id="switchLanguageButton">SWITCH</button>
+				<button id="switchLanguageButton" style="display: none">SWITCH</button>
 				<div id="targetLanguageDisplay"></div>
 			</div>
 			<div id="translationDisplayContainer">
